force-app/main/default/objects/Interview__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate Name</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>