force-app/main/default/objects/Interview__c/fields/Mode_of_Interview__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Interview__c</fullName>
    <label>Mode of Interview</label>
    <type>TextArea</type>
</CustomField>