force-app/main/default/objects/Interview__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <label>Overall Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Poor</fullName>
            </value>
            <value>
                <fullName>2 - Average</fullName>
            </value>
            <value>
                <fullName>3 - Good</fullName>
            </value>
            <value>
                <fullName>4 - Excellent</fullName>
            </value>
            <value>
                <fullName>5 - Outstanding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>