force-app/main/default/objects/Interview__c/fields/Rating_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rating_Comments__c</fullName>
    <label>Rating Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>