force-app/main/default/objects/Interview__c/fields/Round_Name__c.field-meta.xml
<CustomField>
    <fullName>Round_Name__c</fullName>
    <label>Round Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>Level 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>